Added Project page

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
         </header>
         <main>
             <section class="content">
-                <label><a href="#">Terraform tips and tricks</a></label>
-                <label><a href="#">Bigquery Interview question</a></label>
+                <label><a href="#">Terraform Hacks: Effortlessly List Available AWS Machine Images</a></label>
+                <label><a href="https://sudovazid.hashnode.dev/google-bigquery-interview-question">Bigquery Interview question</a></label>
                 <label><a href="#">Building monitoring architecture in Azure cloud using terraform</a></label>
-                <label><a href="#">Personal linux system grafana monitoring dashboard</a></label>
+                <label><a href="#">Personal linux monitoring dashboard using grafana</a></label>
                 <label><a href="#">Budget aws serverless architecture</a></label>
+                <label><a href="#">Automate github to Ec2 deployment</a></label>
             </section>
         </main>
         <script src="js/scripts.js"></script>
