--- a/pages/project.html
+++ b/pages/project.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Sudovazid</title>
         <link rel="stylesheet" href="../css/styles.css" />
+        <link rel="stylesheet" href="../css/project.css" />
     </head>
     <body>
         <header>
@@ -27,6 +28,18 @@
                 <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
             </nav>
         </header>
+        <main>
+            <label>Current project on working</label>
+            <hr />
+            <section class="content">
+                <label><a href="#">Quote app project</a></label>
+                <label><a href="#">Journey</a></label>
+                <label><a href="#">Personal Dashboard Web App</a></label>
+                <label><a href="#">Select Advertisments</a></label>
+                <label><a href="#">Petition to bring back</a></label>
+                <label><a href="#">Sudo District</a></label>
+            </section>
+        </main>
         <script src="js/scripts.js"></script>
     </body>
 </html>
