Update project page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main>
             <section class="content">
                 <label><a href="#">Terraform Hacks: Effortlessly List Available AWS Machine Images</a></label>
-                <label><a href="https://sudovazid.hashnode.dev/google-bigquery-interview-question">Bigquery Interview question</a></label>
+                <label><a href="https://blog.vazid.site/google-bigquery-interview-question">Bigquery Interview question</a></label>
                 <label><a href="#">Building monitoring architecture in Azure cloud using terraform</a></label>
                 <label><a href="#">Personal linux monitoring dashboard using grafana</a></label>
                 <label><a href="#">Budget aws serverless architecture</a></label>
