--- a/pages/project.html
+++ b/pages/project.html
@@ -29,7 +29,7 @@
             </nav>
         </header>
         <main>
-            <label>Current project on working</label>
+            <label>Current project on progress</label>
             <hr />
             <section class="content">
                 <label><a href="#">Quote app project</a></label>
