Update project page

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -30,6 +30,8 @@
         </header>
         <div>
             <label class="name">Sheikh Vazid Ahmed</label>
+            <br />
+            <label class="email">Email: sheikh.vazid.ahmed@gmail.com</label>
         </div>
         <script src="js/scripts.js"></script>
     </body>
