Update project and index page

--- a/pages/project.html
+++ b/pages/project.html
@@ -38,6 +38,7 @@
                 <label><a href="#">Select Advertisments</a></label>
                 <label><a href="#">Petition to bring back</a></label>
                 <label><a href="#">Sudo District</a></label>
+                <label><a href="#">Daily System update</a></label>
             </section>
         </main>
         <script src="js/scripts.js"></script>
