Added Moosam site

--- a/pages/project.html
+++ b/pages/project.html
@@ -32,7 +32,7 @@
             <label>Current project on progress</label>
            
             <section class="content">
-                <label><a href="../projects/moosam/index.html">Moosam - A Weather forcast web app</a></label>
+                <label><a href="https://moosam.site">Moosam - A Weather forcast web app</a></label>
                 <label><a href="#">Quote app project</a></label>
                 <label><a href="#">Journey</a></label>
                 <label><a href="#">Personal Dashboard Web App</a></label>
