--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                     <li><a href="pages/quiz.html">QUIZ</a></li>
                     <li><a href="pages/aboutme.html">ABOUT ME</a></li>
                     <li class="dropdown">
-                        <button class="dropbtn" onclick="toggleDropdown(this)">CATEGORY</button>
+                        <button class="dropbtn" onclick="toggleDropdown(this)">
+                            CATEGORY
+                        </button>
                         <div class="dropdown-content">
                             <a href="#">Infra</a>
                             <a href="#">DevOps</a>
@@ -24,17 +26,43 @@
                         </div>
                     </li>
                 </ul>
-                <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
+                <a
+                    href="javascript:void(0);"
+                    class="icon"
+                    onclick="toggleMenu()"
+                    >&#9776;</a
+                >
             </nav>
         </header>
         <main>
             <section class="content">
-                <label><a href="#">Terraform Hacks: Effortlessly list available AWS Machine Images</a></label>
-                <label><a href="https://blog.vazid.site/google-bigquery-interview-question">Bigquery Interview question</a></label>
-                <label><a href="#">Building monitoring architecture in Azure cloud using terraform</a></label>
-                
-                <label><a href="#">Personal linux monitoring dashboard using grafana</a></label>
-                <label><a href="#">Budget aws serverless architecture</a></label>
+                <label
+                    ><a href="#"
+                        >Terraform Hacks: Effortlessly list available AWS
+                        Machine Images</a
+                    ></label
+                >
+                <label
+                    ><a
+                        href="https://blog.vazid.site/google-bigquery-interview-question"
+                        >Bigquery Interview question</a
+                    ></label
+                >
+                <label
+                    ><a href="#"
+                        >Building monitoring architecture in Azure cloud using
+                        terraform</a
+                    ></label
+                >
+
+                <label
+                    ><a href="#"
+                        >Personal linux monitoring dashboard using grafana</a
+                    ></label
+                >
+                <label
+                    ><a href="#">Budget aws serverless architecture</a></label
+                >
                 <label><a href="#">Automate github to Ec2 deployment</a></label>
             </section>
         </main>
