--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -31,6 +31,8 @@
         <div>
             <label class="name">Sheikh Vazid Ahmed</label>
             <br />
+            <label>Freelance DevOps engineer</label>
+            <>
             <label class="email">Email: sheikh.vazid.ahmed@gmail.com</label>
         </div>
         <script src="js/scripts.js"></script>
