--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -29,11 +29,12 @@
             </nav>
         </header>
         <div>
-            <label class="name">Sheikh Vazid Ahmed</label>
+            <section class="content">
+            <h1>Sheikh Vazid ahmed</h1>
             <br />
-            <label>Freelance DevOps engineer</label>
-            <>
-            <label class="email">Email: sheikh.vazid.ahmed@gmail.com</label>
+            <h3>Freelance DevOps engineer</h3>
+            <h3 class="email">Email: sheikh.vazid.ahmed@gmail.com</h3>
+            </section>
         </div>
         <script src="js/scripts.js"></script>
     </body>
