--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -9,13 +9,13 @@
     <body>
         <header>
             <nav id="myTopnav">
-                <div class="logo"><a href="../index.html">SUDOVAZID</a></div>
-                <ul class="nav-links">
-                    <li><a href="../pages/project.html">PROJECT</a></li>
-                    <li><a href="../pages/quiz.html">QUIZ</a></li>
-                    <li><a href="../pages/aboutme.html">ABOUT ME</a></li>
-                    <li class="dropdown">
-                        <button class="dropbtn" onclick="toggleDropdown(this)">CATEGORY</button>
+                <div class="logo"><a href="../index.html"><b>SUDOVAZID</b></a></div>
+            <ul class="nav-links">
+                <li><a href="../pages/project.html">CHECK MY CURRENT <br><b> PORJECT</b></a></li>
+                <li><a href="../pages/aboutme.html">IF YOU NEED HELP ON <br>PROJECT <b>CONNECT ME </b></a></li>    
+                
+                 <li class="dropdown">
+                     <button class="dropbtn" onclick="toggleDropdown(this)"> <b>Blogs</b></button>
                         <div class="dropdown-content">
                             <a href="#">Infra</a>
                             <a href="#">DevOps</a>
@@ -23,6 +23,7 @@
                             <a href="#">Cloud</a>
                         </div>
                     </li>
+                <li><a href="../pages/quiz.html">TEST YOUR SKILL <br> WITH <b> QUIZ</b></a></li>
                 </ul>
                 <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
             </nav>
