--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Sudovazid</title>
+        <title>VAZID</title>
         <link rel="stylesheet" href="../css/styles.css" />
         <link rel="stylesheet" href="../css/about.css" />
     </head>
     <body>
         <header>
             <nav id="myTopnav">
-                <div class="logo"><a href="../index.html"><b>SUDOVAZID</b></a></div>
+                <div class="logo"><a href="../index.html"><b>VAZID</b></a></div>
             <ul class="nav-links">
                 <li><a href="../pages/project.html">CHECK MY CURRENT <br><b> PORJECT</b></a></li>
                 <li><a href="../pages/aboutme.html">IF YOU NEED HELP ON <br>PROJECT <b>CONNECT ME </b></a></li>    
@@ -35,6 +35,11 @@
             <br />
             <h3>Freelance DevOps engineer</h3>
             <h3 class="email">Email: sheikh.vazid.ahmed@gmail.com</h3>
+            </section>
+            <section class="content">
+                <h1>About Me</h1>
+                <p>I am Vazid I'm a passionate freelance experienced DevOps professional, currently immersed in the exciting world of Machine Learning. My aim? To combine these fields and transition into the innovative sphere of ML Ops, the future of managing and deploying ML models. 
+                    Join me on my journey as I navigate and share insights from the dynamic world of technology and machine learning</p>
             </section>
         </div>
         <script src="js/scripts.js"></script>
