--- a/pages/project.html
+++ b/pages/project.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Sudovazid</title>
+        <title>VAZID</title>
         <link rel="stylesheet" href="../css/styles.css" />
         <link rel="stylesheet" href="../css/project.css" />
     </head>
     <body>
         <header>
             <nav id="myTopnav">
-                <div class="logo"><a href="../index.html"><b>SUDOVAZID</b></a></div>
+                <div class="logo"><a href="../index.html"><b>VAZID</b></a></div>
             <ul class="nav-links">
                 <li><a href="../pages/project.html">CHECK MY CURRENT <br><b> PORJECT</b></a></li>
                 <li><a href="../pages/aboutme.html">IF YOU NEED HELP ON <br>PROJECT <b>CONNECT ME </b></a></li>    
