--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                     ><a href="#">Budget aws serverless architecture</a></label
                 >
                 <label><a href="#">Automate github to Ec2 deployment</a></label>
+                <label>
+                    <a href="#">Stactic Website: A Robust AWS-based Web Application Framework </a>
+                </label>
             </section>
         </main>
         <script src="js/scripts.js"></script>
