Added border to header

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
                  <li class="dropdown">
                      <button class="dropbtn" onclick="toggleDropdown(this)"> Check my <b>Blogs</b></button>
                         <div class="dropdown-content">
+                            <a href="#">Linux</a>
                             <a href="#">Infra</a>
                             <a href="#">DevOps</a>
                             <a href="#">Monitoring</a>
                             <a href="#">Cloud</a>
+                            <a href="#">Data science</a>
                         </div>
                     </li>
                 <li><a href="pages/quiz.html">TEST YOUR SKILL <br> WITH <b> QUIZ</b></a></li>
@@ -68,6 +70,10 @@
                 <label>
                     <a href="#">Stactic Website: A Robust AWS-based Web Application Framework </a>
                 </label>
+                <label>
+                    <a href="#">File Organizer: Linux Project #1  </a>
+                </label>
+                
             </section>
         </main>
         <script src="js/scripts.js"></script>
