Added About page

--- a/pages/project.html
+++ b/pages/project.html
@@ -33,14 +33,15 @@
             
            
             <section class="content">
-                <label><a href="https://moosam.site">Moosam - A Weather forcast web app</a></label>
-                <label><a href="#">Quote app project</a></label>
-                <label><a href="#">Journey</a></label>
-                <label><a href="#">Personal Dashboard Web App</a></label>
-                <label><a href="#">Select Advertisments</a></label>
-                <label><a href="#">Petition to bring back</a></label>
-                <label><a href="#">Sudo District</a></label>
-                <label><a href="#">Daily System update</a></label>
+                <label><a href="https://moosam.site">Moosam - Your Clean Weather Companion</a></label>
+                <label><a href="#">Quote app project - Comming Soon</a></label>
+                <label><a href="#">Journey - Comming Soon</a></label>
+                <label><a href="#">Personal Dashboard Web App - Comming Soon</a></label>
+                <label><a href="#">Select Advertisments - Comming Soon</a></label>
+                <label><a href="#">Petition to bring back - Comming Soon</a></label>
+                <label><a href="#">Sudo District - Inprogress</a></label>
+                <label><a href="#">Daily System update - Comming Soon</a></label>
+                <label><a href="#">Adertisment Agency - Comming Soon</a></label>
             </section>
         </main>
         <script src="js/scripts.js"></script>
