--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -31,15 +31,11 @@
         </header>
         <div>
             <section class="content">
-            <h1>Sheikh Vazid ahmed</h1>
-            <br />
-            <h3>Freelance DevOps engineer</h3>
-            <h3 class="email">Email: sheikh.vazid.ahmed@gmail.com</h3>
-            </section>
-            <section class="content">
-                <h1>About Me</h1>
-                <p>I am Vazid I'm a passionate freelance experienced DevOps professional, currently immersed in the exciting world of Machine Learning. My aim? To combine these fields and transition into the innovative sphere of ML Ops, the future of managing and deploying ML models. 
-                    Join me on my journey as I navigate and share insights from the dynamic world of technology and machine learning</p>
+            <main>
+        <div class="intro-text">
+            <p>SHEIKH VAZID AHMED, A FREELANCE DEVOPS ENGINEER FROM MANGALORE, KARNATAKA. CURRENTLY EXPLORING MLOPS AND DATA ANALYSIS TO DEEPEN MY EXPERTISE IN DATA. I AM CONSTANTLY WORKING ON NEW PROJECTS TO SOLVE REAL-WORLD PROBLEMS AND IMPROVE DAILY WORKFLOWS. VISIT MY PROJECT PAGE TO SEE WHAT I'M WORKING ON.</p>
+        </div>
+    </main>
             </section>
         </div>
         <script src="js/scripts.js"></script>
