--- a/pages/project.html
+++ b/pages/project.html
@@ -31,7 +31,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../pages/quiz.html"
+                        <a href="../pages/soon.html"
                             >TEST YOUR SKILL <br />
                             WITH <b> QUIZ</b></a
                         >
@@ -45,7 +45,7 @@
                 <main>
                     <div class="project-list">
                         <div class="project">
-                            <span class="project-name">Moosam - Your Clean Weather Companion</span>
+                            <span class="project-name"><a href="https://moosam.site/">Moosam - Your Clean Weather Companion</a></span>
                             <span class="status launched">LAUNCHED</span>
                         </div>
                         <div class="project">
