--- a/pages/soon.html
+++ b/pages/soon.html
@@ -41,40 +41,9 @@
             </nav>
         </header>
         <section class="content">
-            <p>
-                Quizzes can be an effective tool for programmer to test their knowledge and reinforce what they have
-                learned.
-            </p>
-
-            <div class="card-container">
-                <div class="card">
-                    <h2>SQL BASIC</h2>
-                </div>
-                <div class="card">
-                    <h2>PYTHON</h2>
-                </div>
-                <div class="card">
-                    <h2>DOCKER</h2>
-                </div>
-                <div class="card">
-                    <h2>TERRAFORM</h2>
-                </div>
-                <div class="card">
-                    <h2>AWS</h2>
-                </div>
-                <div class="card">
-                    <h2>ML</h2>
-                </div>
-                <div class="card">
-                    <h2>GRAPH</h2>
-                </div>
-                <div class="card">
-                    <h2>LINUX</h2>
-                </div>
-                <div class="card">
-                    <h2>PNADAS</h2>
-                </div>
-            </div>
+            <main>
+                <div class="soon">Comming Soon</div>
+            </main>
         </section>
 
         <script src="js/scripts.js"></script>
