--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -10,13 +10,19 @@
     <body>
         <header>
             <nav id="myTopnav">
-                <div class="logo"><a href="../index.html"><b>VAZID</b></a></div>
-            <ul class="nav-links">
-                <li><a href="../pages/project.html">CHECK MY CURRENT <br><b> PORJECT</b></a></li>
-                <li><a href="../pages/aboutme.html">IF YOU NEED HELP ON <br>PROJECT <b>CONNECT ME </b></a></li>    
-                
-                 <li class="dropdown">
-                     <button class="dropbtn" onclick="toggleDropdown(this)"> <b>Blogs</b></button>
+                <div class="logo">
+                    <a href="../index.html"><b>VAZID</b></a>
+                </div>
+                <ul class="nav-links">
+                    <li>
+                        <a href="../pages/project.html">CHECK MY CURRENT <br /><b> PORJECT</b></a>
+                    </li>
+                    <li>
+                        <a href="../pages/aboutme.html">IF YOU NEED HELP ON <br />PROJECT <b>CONNECT ME </b></a>
+                    </li>
+
+                    <li class="dropdown">
+                        <button class="dropbtn" onclick="toggleDropdown(this)"><b>Blogs</b></button>
                         <div class="dropdown-content">
                             <a href="#">Infra</a>
                             <a href="#">DevOps</a>
@@ -24,18 +30,28 @@
                             <a href="#">Cloud</a>
                         </div>
                     </li>
-                <li><a href="../pages/quiz.html">TEST YOUR SKILL <br> WITH <b> QUIZ</b></a></li>
+                    <li>
+                        <a href="../pages/soon.html"
+                            >TEST YOUR SKILL <br />
+                            WITH <b> QUIZ</b></a
+                        >
+                    </li>
                 </ul>
                 <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
             </nav>
         </header>
         <div>
             <section class="content">
-            <main>
-        <div class="intro-text">
-            <p>SHEIKH VAZID AHMED, A FREELANCE DEVOPS ENGINEER FROM MANGALORE, KARNATAKA. CURRENTLY EXPLORING MLOPS AND DATA ANALYSIS TO DEEPEN MY EXPERTISE IN DATA. I AM CONSTANTLY WORKING ON NEW PROJECTS TO SOLVE REAL-WORLD PROBLEMS AND IMPROVE DAILY WORKFLOWS. VISIT MY PROJECT PAGE TO SEE WHAT I'M WORKING ON.</p>
-        </div>
-    </main>
+                <main>
+                    <div class="intro-text">
+                        <p>
+                            SHEIKH VAZID AHMED, A FREELANCE DEVOPS ENGINEER FROM MANGALORE, KARNATAKA. CURRENTLY
+                            EXPLORING MLOPS AND DATA ANALYSIS TO DEEPEN MY EXPERTISE IN DATA. I AM CONSTANTLY WORKING ON
+                            NEW PROJECTS TO SOLVE REAL-WORLD PROBLEMS AND IMPROVE DAILY WORKFLOWS. VISIT MY PROJECT PAGE
+                            TO SEE WHAT I'M WORKING ON.
+                        </p>
+                    </div>
+                </main>
             </section>
         </div>
         <script src="js/scripts.js"></script>
