--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -8,52 +8,90 @@
         <link rel="stylesheet" href="../css/about.css" />
     </head>
     <body>
-        <header>
-            <nav id="myTopnav">
-                <div class="logo">
-                    <a href="../index.html"><b>VAZID</b></a>
-                </div>
-                <ul class="nav-links">
-                    <li>
-                        <a href="../pages/project.html">CHECK MY CURRENT <br /><b> PORJECT</b></a>
-                    </li>
-                    <li>
-                        <a href="../pages/aboutme.html">IF YOU NEED HELP ON <br />PROJECT <b>CONNECT ME </b></a>
-                    </li>
-
-                    <li class="dropdown">
-                        <button class="dropbtn" onclick="toggleDropdown(this)"><b>Blogs</b></button>
-                        <div class="dropdown-content">
-                            <a href="#">Infra</a>
-                            <a href="#">DevOps</a>
-                            <a href="#">Monitoring</a>
-                            <a href="#">Cloud</a>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="../pages/soon.html"
-                            >TEST YOUR SKILL <br />
-                            WITH <b> QUIZ</b></a
-                        >
-                    </li>
-                </ul>
-                <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">&#9776;</a>
-            </nav>
-        </header>
+      <header>
+        <nav>
+            <div class="logo">
+                <a href="../index.html"><strong>VAZID</strong></a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="../pages/project.html">MY CURRENT <strong>PROJECT</strong></a></li>
+                <li><a href="../pages/aboutme.html">CONNECT ME</a></li>
+                <li class="dropdown">
+                    <button class="dropbtn">CHECK MY <strong>BLOGS</strong></button>
+                    <div class="dropdown-content">
+                        <a href="#">Linux</a>
+                        <a href="#">Infra</a>
+                        <a href="#">DevOps</a>
+                        <a href="#">Monitoring</a>
+                        <a href="#">Cloud</a>
+                        <a href="#">Data science</a>
+                    </div>
+                </li>
+                <li><a href="../pages/soon.html">TAKE <strong>QUIZ</strong></a></li>
+            </ul>
+            <div class="icon" onclick="toggleMenu()">☰</div>
+        </nav>
+    </header>
         <div>
             <section class="content">
                 <main>
                     <div class="intro-text">
                         <p>
-                            SHEIKH VAZID AHMED, A FREELANCE DEVOPS ENGINEER FROM MANGALORE, KARNATAKA. CURRENTLY
-                            EXPLORING MLOPS AND DATA ANALYSIS TO DEEPEN MY EXPERTISE IN DATA. I AM CONSTANTLY WORKING ON
-                            NEW PROJECTS TO SOLVE REAL-WORLD PROBLEMS AND IMPROVE DAILY WORKFLOWS. VISIT MY PROJECT PAGE
+                            <b>SHEIKH VAZID AHMED</b>, A freelance DevOps Engineer, Web Developer, Web Designer, and Data engineer from Mangalore, Karnataka. <br><br>
+                            CURRENTLY EXPLORING MLOPS AND DATA ANALYSIS TO DEEPEN MY EXPERTISE IN DATA. <br><br>
+                            I AM CONSTANTLY WORKING ON NEW PROJECTS TO SOLVE REAL-WORLD PROBLEMS AND IMPROVE DAILY WORKFLOWS. VISIT MY PROJECT PAGE
                             TO SEE WHAT I'M WORKING ON.
                         </p>
                     </div>
                 </main>
             </section>
         </div>
-        <script src="js/scripts.js"></script>
+        
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>About VAZID</h3>
+                <p>VAZID is a Freelance DevOps engineer,
+                    Web developer,
+                    Web designer, and data engineer.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Articles</a></li>
+                    <li><a href="#">Categories</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Email: info@vazid.com</p>
+                <p>Phone: (123) 456-7890</p>
+                <p>Address: 123 Tech Street, Digital City</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="social-icons">
+                <a href="#" aria-label="Facebook"></a>
+                <a href="#" aria-label="Twitter"></a>
+                <a href="#" aria-label="Instagram"></a>
+                <a href="#" aria-label="LinkedIn"></a>
+            </div>
+            <p>© 2024 VAZID. All rights reserved.</p>
+            <p>Designed by VAZID</p>
+        </div>
+    </footer>
+
+    <script>
+        function toggleMenu() {
+            var x = document.querySelector(".nav-links");
+            if (x.style.display === "flex") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "flex";
+            }
+        }
+    </script>
     </body>
 </html>
